--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Cinema"
-             StartupUri="Windows/AuthorizationWindow.xaml"
+             StartupUri="Windows/NavigateWindow.xaml"
              >
     <Application.Resources>
         <Style x:Key="tbStyle" TargetType="TextBox">
