--- a/Pages/AddEditFilmPage.xaml
+++ b/Pages/AddEditFilmPage.xaml
@@ -94,6 +94,28 @@
                        Margin="0 15 0 0"
                        />
         </StackPanel>
+        <StackPanel HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Grid.Column="0"
+                    Grid.Row="1"
+                    Margin="36,40,0,0"
+                    Height="394" Width="282">
+            <Border BorderBrush="Gray"
+                    BorderThickness="1"
+                    Height="312" Width="258">
+                <Image x:Name="ImgFilm"/>
+            </Border>
+            <Button x:Name="BtnChooseImage"
+                    Content="Выбрать фото"
+                    Style="{StaticResource btnStyle}"
+                    Height="40"
+                    Width="150"
+                    FontSize="20"
+                    Margin="0 20 0 0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Click ="BtnChooseImage_Click"/>
+        </StackPanel>
 
         <StackPanel
                     HorizontalAlignment="Left"
