--- a/Windows/MainProductWindow.xaml
+++ b/Windows/MainProductWindow.xaml
@@ -76,16 +76,27 @@
                             Background="#00C322"
                             MouseLeftButtonUp="Border_MouseLeftButtonUp" Margin="5">
                         <StackPanel>
-                            <Image Height="239"
-                                   Width="198">
+                            <Image Height="230"
+                                   Width="200">
+                                <Image.Source>
+                                    <Binding Path="PhotoPath">
+                                        <Binding.TargetNullValue>
+                                            <ImageSource>
+                                                /Res/noImage.png
+                                            </ImageSource>
+                                        </Binding.TargetNullValue>
+                                    </Binding>
+                                </Image.Source>
                             </Image>
+
+
                             <TextBlock Text="{Binding ProductTitle}"
                                        FontSize="18"
                                        FontWeight="Bold"
                                        Margin="5 0 0 0"
                                        TextWrapping="Wrap"/>
 
-                            <TextBlock Text="{Binding COst}"
+                            <TextBlock Text="{Binding Cost}"
                                        FontSize="18"
                                        FontWeight="Light"
                                        Margin="10 0 0 0"/>
