--- a/Windows/MainProductWindow.xaml
+++ b/Windows/MainProductWindow.xaml
@@ -18,10 +18,10 @@
 
         <TextBlock Text="Список продуктов"
                    HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
+                   VerticalAlignment="Top"
                    FontSize="36"
                    FontWeight="Medium"
-                   Margin="0 10 0 0"
+                   Margin="0,-8,0,0"
             />
         <WrapPanel Grid.Row="1" VerticalAlignment="Center">
             <TextBlock Text="Поиск"
@@ -73,11 +73,15 @@
                             BorderThickness="1"
                             Width="184"
                             Height="302"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
                             Background="#00C322"
                             MouseLeftButtonUp="Border_MouseLeftButtonUp" Margin="5">
                         <StackPanel>
                             <Image Height="230"
-                                   Width="200">
+                                   Width="200"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center">
                                 <Image.Source>
                                     <Binding Path="PhotoPath">
                                         <Binding.TargetNullValue>
@@ -108,5 +112,15 @@
             </ListView.ItemTemplate>
 
         </ListView>
+        <Button x:Name="btn"
+                Grid.Row="2"
+                Style="{StaticResource btnStyle}"
+                Height="45"
+                Width="45"
+                HorizontalAlignment="Left"
+                Margin="1116,629,0,10"
+                Content="ЛК"
+                Click="btn_Click" Grid.RowSpan="2"
+            />
     </Grid>
 </Window>
