--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -18,11 +18,29 @@
 
         <TextBlock Text="Список фильмов"
                    HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
+                   VerticalAlignment="Top"
                    FontSize="36"
                    FontWeight="Medium"
-                   Margin="0 10 0 0"
+                   Margin="0,-8,0,0"
             />
+        <!--<Label x:Name="LbTime"
+               Width="110"
+               Height="50" 
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               FontSize="20"
+               Margin="1090,0,0,0"
+               Grid.Row="3"
+            />
+        <Label x:Name="LbDate"
+               Width="211"
+               Height="50"
+               FontSize="20"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Margin="879,0,0,0"
+               Grid.Row="3"
+            />-->
         <WrapPanel Grid.Row="1" VerticalAlignment="Center">
             <TextBlock Text="Поиск"
                        Margin="10"
@@ -74,11 +92,16 @@
                             BorderThickness="1"
                             Width="184"
                             Height="302"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
                             Background="#00C322"
                             MouseLeftButtonUp="Border_MouseLeftButtonUp" Margin="5">
                         <StackPanel>
                             <Image Height="240"
-                                   Width="200">
+                                   Width="200"
+                                   x:Name="Img"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center">
                                 <Image.Source>
                                     <Binding Path="PhotoPath">
                                         <Binding.TargetNullValue>
@@ -91,9 +114,7 @@
                             </Image>
                             <TextBlock Text="{Binding MovieTitle}"
                                        FontSize="18"
-                                       FontWeight="Bold"
-                                       Margin="5 -10 0 0"
-                                       TextWrapping="Wrap"/>
+                                       FontWeight="Bold"/>
 
                             <TextBlock Text="{Binding Rating}"
                                        FontSize="18"
@@ -107,5 +128,14 @@
             </ListView.ItemTemplate>
 
         </ListView>
+        <Button x:Name="btn"
+                Grid.Row="3"
+                Style="{StaticResource btnStyle}"
+                Height="45"
+                Width="45"
+                HorizontalAlignment="Right"
+                Margin="5"
+                Content="ЛК" Click="btn_Click"
+            />
     </Grid>
 </Window>
